# audiomason2

./: .gitignore  .stignore  AGENTS.md  CLAUDE.md  GIT_SETUP.md  INSTALL.sh  INTERFACE_SPECIFICATION.md  README.md  README_INSTALLATION.md  am2-globals.d.ts  am_patch.repo.toml  audiomason  audiomason_test_all.sh  audiomason_test_results_20260130_180525.txt  badguys.py  badguys_specification.md  biome.json  changes.md  extract_mypyfails.py  fff.txt  package-lock.json  package.json  playwright.config.ts  pyproject.toml  pytest.ini  run_wizard.py  test_web_ui.py  tsconfig.json  tsconfig.strict.json  web_interface_diag.sh
.am_patch/: tsconfig.typescript_gate.json
am_patch/: __init__.py  __main__.py  archive.py  cli.py  compat.py  config.py  deps.py  gates.py  git_ops.py  logging.py  model.py  patch_exec.py  plan.py  promote.py  runner.py  workspace.py
am_shadow/: am_patch.md  am_patch.py  am_patch_instructions.md  am_patch_specification.md
audit/: AUDIT_REPORT.md  EVALUATE_AUDIT.md  RUNTIME_EVIDENCE.md  SUMMARIZE_AUDIT.md  audit_report.py  audit_report_config.yaml  audit_rubric.yaml  evaluate_audit.py  run_runtime_evidence.py  runtime_evidence_tooling.md  summarize_audit.py  summary.md
badguys/: BADGUYS_DETAILED_BATCH_SPEC.md  BADGUYS_IMPLEMENTATION_PLAN.md  BADGUYS_TEST_MATRIX.md  README.md  _util.py  badguys_specification.md  bdg_evaluator.py  bdg_executor.py  bdg_loader.py  bdg_materializer.py  bdg_ops_files.py  bdg_ops_ipc.py  bdg_recipe.py  config.toml  discovery.py  ipc_result_reader.py  ipc_stream_recorder.py  run_suite.py  suite.toml
docs/: ADVANCED_FEATURES.md  AUDIOMASON2_PROJECT_CONTRACT.md  AudioMason2_Project_Specification.md  CHANGELOG_WEB_UI.md  COMPLETE.md  DELIVERY.md  DELIVERY_SUMMARY.md  FINAL_REPORT.md  FULL_IMPLEMENTATION_COMPLETE.md  INSTALL_GUIDE.md  MASTER_SPEC_v1_9_0_ZERO_LOSS.jsonl  MASTER_SPEC_v2_0_0.jsonl  MASTER_SPEC_v2_0_0.txt  MASTER_SUMMARY.md  MVP_COMPLETE.md  PROGRESS_REPORT.md  QUICKSTART.md  README.md  STATUS.md  TUI.md  WEB_SERVER.md  WEB_UI_COMPLETE.md  WEB_UI_IMPLEMENTATION.md  WEB_UI_QUICK_START.md  WIZARD_ENGINE.md  aaa.ttt  aaa.txt  am_patch_instructions.md  am_patch_specification.md  badguys_specification.jsonl  changes.md  ddd.ddd  fff.txt  instructions_implementation_chats.txt  instructions_project_chats.txt  pm_spec.md  render_master_spec_txt.py  specification.jsonl  specification.md  test.txt  (+2 more)
governance/: specification.jsonl
pipelines/: minimal.yaml  standard.yaml
scripts/: am_patch.md  am_patch.py  am_patch_instructions.md  am_patch_policy_glossary.md  am_patch_specification.md  am_patch_web.py  authority_resolver.py  check_patch_pm.md  check_patch_pm.py  patchhub.py  patchhub_specification.md  pm_spec_validator.py  pm_validator.py  pm_validator_pack_contract.py  rc_resolver.py  sync_issues_archive.md  sync_issues_archive.py  test.js
src/: test.py
tests/: conftest.py  simple_test_config.py  test_am_patch_archive.py  test_am_patch_autofix_logging.py  test_am_patch_config_edit_roundtrip.py  test_am_patch_config_schema.py  test_am_patch_docs_gate.py  test_am_patch_dont_touch_gate.py  test_am_patch_final_summary.py  (+152 more)
(+1017 files in other folders)
